# controller/admin_login.go
@@ -17,11 +17,12 @@ type AdminLoginController struct{}
 func AdminLoginRegister(group *gin.RouterGroup) {
 	adminLogin := &AdminLoginController{}
 	group.POST("/login", adminLogin.AdminLogin)
+	group.GET("/logout", adminLogin.AdminLoginOut)
 }
 
-// ListPage godoc
-// @Summary 管理员登录
-// @Description 管理员登录
+// AdminLogin godoc
+// @Summary 管理员登陆
+// @Description 管理员登陆
 // @Tags 管理员接口
 // @ID /admin_login/login
 // @Accept  json
@@ -29,16 +30,16 @@ func AdminLoginRegister(group *gin.RouterGroup) {
 // @Param body body dto.AdminLoginInput true "body"
 // @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
 // @Router /admin_login/login [post]
-func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
+func (adminlogin *AdminLoginController) AdminLogin(c *gin.Context) {
 	params := &dto.AdminLoginInput{}
 	if err := params.BindValidParam(c); err != nil {
 		middleware.ResponseError(c, 2000, err)
 		return
 	}
 
-	//1。params.UserName 取得管理员信息 admininfo
-	//2. admininfo.salt + params.Password sha256 => password
-	//3. saltPassword == admininfo.password
+	//1. params.UserName 取得管理员信息 admininfo
+	//2. admininfo.salt + params.Password sha256 => saltPassword
+	//3. saltPassword==admininfo.password
 	tx, err := lib.GetGormPool("default")
 	if err != nil {
 		middleware.ResponseError(c, 2001, err)
@@ -51,21 +52,37 @@ func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
 		return
 	}
 
-	seeInfo := &dto.AdminSessionInfo{
+	//设置session
+	sessInfo := &dto.AdminSessionInfo{
 		ID:        admin.Id,
 		UserName:  admin.UserName,
 		LoginTime: time.Now(),
 	}
-	sessBts, err := json.Marshal(seeInfo)
+	sessBts, err := json.Marshal(sessInfo)
 	if err != nil {
 		middleware.ResponseError(c, 2003, err)
 		return
 	}
-
 	sess := sessions.Default(c)
 	sess.Set(public.AdminSessionInfoKey, string(sessBts))
 	sess.Save()
 
 	out := &dto.AdminLoginOutput{Token: admin.UserName}
 	middleware.ResponseSuccess(c, out)
+}
+
+// AdminLogin godoc
+// @Summary 管理员退出
+// @Description 管理员退出
+// @Tags 管理员接口
+// @ID /admin_login/logout
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin_login/logout [get]
+func (adminlogin *AdminLoginController) AdminLoginOut(c *gin.Context) {
+	sess := sessions.Default(c)
+	sess.Delete(public.AdminSessionInfoKey)
+	sess.Save()
+	middleware.ResponseSuccess(c, "")
 }
