# docs/swagger.yaml
@@ -75,7 +75,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: 管理员登录
+      description: 管理员登陆
       operationId: /admin_login/login
       parameters:
       - description: body
@@ -96,7 +96,28 @@ paths:
                 data:
                   $ref: '#/definitions/dto.AdminLoginOutput'
               type: object
-      summary: 管理员登录
+      summary: 管理员登陆
+      tags:
+      - 管理员接口
+  /admin_login/logout:
+    get:
+      consumes:
+      - application/json
+      description: 管理员退出
+      operationId: /admin_login/logout
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 管理员退出
       tags:
       - 管理员接口
 swagger: "2.0"
